Added Liscense. Dir cleanup

--- a/asteria/server/browser_view/browser.html
+++ b/asteria/server/browser_view/browser.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Desktop Average Color Test Panel</title>
+    <title>Asteria Test Panel</title>
 </head>
 <body>
     <canvas id="canvas"></canvas>
